changed ping to rtt for clarity

--- a/view/index.html
+++ b/view/index.html
@@ -30,7 +30,7 @@
 <body>
     
     <div id="pingBox">
-        PING: <span id="pingNum"></span> ms
+        RTT: <span id="pingNum"></span> ms
     </div>
 
     <h1>JakeJohnLaneAwesomeGame</h1>
