--- a/view/index.html
+++ b/view/index.html
@@ -13,7 +13,8 @@
         }
         
         h1 {
-        
+            margin-top: 5px;
+            margin-bottom: 5px;
         }
         
         #pingBox {
@@ -56,7 +57,16 @@ $(function() {
     requestAnimFrame( animate ); // I guess this starts a loop and keeps animating. Magic!
     
     var userid = 0;
-
+    var MAX_SPEED = 6000;
+    var FRICTION = 0.97;
+    var upArrow = 38;
+    var downArrow = 40;
+    var rightArrow = 39;
+    var leftArrow = 37;
+    var upKey = 87;
+    var downKey = 83;
+    var rightKey = 68;
+    var leftKey = 65;
     var game = {};
     game.players = {}; // map id->player
     game.attacks = {}; // map id->attack
@@ -75,8 +85,6 @@ $(function() {
     
     ws.onmessage = function (evt) {
     	var message = JSON.parse(evt.data);
-    	//console.log(message.data);
-    	var data = message.data;
     	switch (message.type) {
     	case ("welcome"):
     	    console.log("welcome msg received, id: " + message.id);
@@ -87,6 +95,8 @@ $(function() {
             $("#pingNum").text(ping);
             break;
     	case ("update"):
+    		//console.log(data);
+    	    var data = JSON.parse(message.data);
     		var playerIDs = []; // make a set of current ids we are using
             var attackIDs = [];
     	    for (id in game.players) {
@@ -201,17 +211,6 @@ $(function() {
             ws.send(JSON.stringify(message));
         }
     }, 20);
-    
-    var MAX_SPEED = 6000;
-    var FRICTION = 0.97;
-    var upArrow = 38;
-    var downArrow = 40;
-    var rightArrow = 39;
-    var leftArrow = 37;
-    var upKey = 87;
-    var downKey = 83;
-    var rightKey = 68;
-    var leftKey = 65;
 
     var texture = PIXI.Texture.fromImage("img/wizard-sm.png");
     // create a new Sprite
