attacks work for the most part now, getting out of bounds errors on server side. Can see other players now, although they don't always show the right pic :)

--- a/view/index.html
+++ b/view/index.html
@@ -2,280 +2,21 @@
 <html>
 <head>
     <title>JakeJohnLaneAwesomeGame</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #000000;
-            text-align: center;
-            font-family: "Courier New", monospace;
-            color: white;
-        }
-        
-        h1 {
-            margin-top: 5px;
-            margin-bottom: 5px;
-        }
-        
-        #pingBox {
-            position: fixed;
-            top: 25px;
-            right: 25px;
-            color: #00FF26;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="app.css" />
     <script src="pixi.js"></script>
     <script src="jquery.js"></script>
-    <script src="hotkey_plugin.js"></script>
+    <script src="app.js"></script>
 
 </head>
-<body>
+  <body>
     
     <div id="pingBox">
         RTT: <span id="pingNum"></span> ms
     </div>
 
     <h1>JakeJohnLaneAwesomeGame</h1>
-    
-    <script>
-    
-$(function() {
 
-    // create an new instance of a pixi stage
-    var stage = new PIXI.Stage(0xFFFFFF);
-    stage.interactive = true;
-
-    // create a renderer instance
-    var renderer = new PIXI.autoDetectRenderer(1024, 640);
-    
-    // set the canvas width and height to fill the screen
-    // renderer.view.style.display = "block";
-
-    // add the renderer view element to the DOM
-    document.body.appendChild(renderer.view);
-
-    requestAnimFrame( animate ); // I guess this starts a loop and keeps animating. Magic!
-    
-    var userid = 0;
-    var MAX_SPEED = 6000;
-    var FRICTION = 0.97;
-    var upArrow = 38;
-    var downArrow = 40;
-    var rightArrow = 39;
-    var leftArrow = 37;
-    var upKey = 87;
-    var downKey = 83;
-    var rightKey = 68;
-    var leftKey = 65;
-    var game = {};
-    game.players = {}; // map id->player
-    game.attacks = {}; // map id->attack
-    
-    function animate() {
-        requestAnimFrame( animate );
-        renderer.render(stage);
-    }
-    
-    // var ws = new WebSocket("ws://127.0.0.1:9999/");
-    var ws = new WebSocket("ws://54.69.151.4:9999/");
-    
-    ws.onopen = function() {
-        console.log("socket opened");
-    };
-    
-    ws.onmessage = function (evt) {
-    	var message = JSON.parse(evt.data);
-    	switch (message.type) {
-    	case ("welcome"):
-    	    console.log("welcome msg received, id: " + message.id);
-    	    userid = message.id;
-    	    break;
-    	case ("ping"):
-            var ping = new Date().getTime() - message.data;
-            $("#pingNum").text(ping);
-            break;
-    	case ("update"):
-    		//console.log(data);
-    	    var data = JSON.parse(message.data);
-    		var playerIDs = []; // make a set of current ids we are using
-            var attackIDs = [];
-    	    for (id in game.players) {
-    	    	playerIDs.push(id);
-    	    }
-    	    for (id in game.attacks) {
-    	    	attackIDs.push(id);
-    	    }
-        	data.players.forEach(function(player) {
-            	var id = player.id;
-            	if (game.players[id] == null) {
-            		// register new player
-            		// create a texture from an image path
-            	    var texture = PIXI.Texture.fromImage("img/wizard-sm.png");
-            		// create a new Sprite
-            		game.players[id] = new PIXI.Sprite(texture);
-            		// center the sprite
-            		game.players[id].anchor.x = 0.5;
-            		game.players[id].anchor.y = 0.5;
-            		// position
-            		game.players[id].position.x = player.xPos;
-            		game.players[id].position.y = player.yPos;
-            		stage.addChild(game.players[id]);
-            	}
-            	else {
-            		game.players[id].position.x = player.xPos;
-            		game.players[id].position.y = player.yPos;
-            		playerIDs.pop(id);
-            	}
-            });
-    	    data.attacks.forEach(function(attack) {
-    	    	var id = attack.id;
-    	    	if (game.attacks[id] == null) {
-    	    		var texture = PIXI.Texture.fromImage("img/fireball-sm.png");
-    	    		game.attacks[id] = new PIXI.Sprite(texture);
-    	    		game.attacks[id].anchor.x = 0.5;
-    	    		game.attacks[id].anchor.y = 0.5;
-    	    		game.attacks[id].position.x = attack.xPos;
-                    game.attacks[id].position.y = attack.yPos;
-                    stage.addChild(game.attacks[id]);
-    	    	}
-    	    	else {
-                    game.attacks[id].position.x = attack.xPos;
-                    game.attacks[id].position.y = attack.yPos;
-                    attackIDs.pop(id);
-    	    	}
-    	    });
-    	    playerIDs.forEach(function(id) {
-    	    	stage.removeChild(game.players[id]);
-    	    });
-            attackIDs.forEach(function(id) {
-                stage.removeChild(game.attacks[id]);
-            });
-            break;
-        default:
-        	console.log("unknown message type:");
-            console.log(message);
-        	break;
-        }
-    };
-    
-    ws.onclose = function() {
-        console.log("socket closed");
-    };
-    
-    ws.onerror = function(err) {
-        console.log("error: " + err.data);
-    };
-    
-    stage.click = function(data) {
-        var attack = {};
-        attack.xPos = 0; // TODO: get position of player and put these here
-        attack.yPos = 0;
-        var totalVelocity = 10; // TODO: get this from player
-        var xClick = data.global.x;
-        var yClick = data.global.y;
-        var xDelta = xClick - attack.xPos;
-        var yDelta = yClick - attack.yPos;
-        var d = Math.sqrt((xDelta * xDelta) + (yDelta * yDelta));
-        var factor = 10 / d;
-        attack.xVelocity = xDelta * factor;
-        attack.yVelocity = yDelta * factor;
-        attack.ownerID = userid;
-        var message = {type:"attack",id:userid,data:attack};
-        ws.send(JSON.stringify(message));
-    }
-    
-    // send ping requests
-    setInterval(function() {
-        if (userid != 0) { // has the welcome message arrived?
-            var message = {};
-            message.type = "ping";
-            message.id = userid;
-            message.data = new Date().getTime();
-            ws.send(JSON.stringify(message));
-        }
-    }, 2000);
-
-    // send player update
-    setInterval(function() {
-        if (userid != 0) { // has the welcome message arrived?
-            var playerInfo = {};
-            playerInfo.xPos = 200;
-            playerInfo.yPos = 200;
-            playerInfo.id = userid;
-            playerInfo.xVelocity = 0;
-            playerInfo.yVelocity = 0;
-            var message = {};
-            message.type = "player_update";
-            message.id = userid;
-            message.data = playerInfo;
-            ws.send(JSON.stringify(message));
-        }
-    }, 20);
-
-    var texture = PIXI.Texture.fromImage("img/wizard-sm.png");
-    // create a new Sprite
-    var wizard = new PIXI.Sprite(texture);
-    wizard.anchor.x = 0.5;
-    wizard.anchor.y = 0.5;
-    wizard.position.x = 500;
-    wizard.position.y = 500;
-    stage.addChild(wizard);
-    
-    wizard.vx = 0;
-    wizard.vy = 0;
-    wizard.health = 100;
-    
-    $(document).keydown(function(event) {
-        switch(event.which) {
-        case (upArrow):
-        case (upKey):
-            wizard.vy = 0 - MAX_SPEED;
-            break;
-        case (downArrow):
-        case (downKey):
-            wizard.vy = MAX_SPEED;
-            break;
-        case (leftArrow):
-        case (leftKey):
-            wizard.vx = 0 - MAX_SPEED;
-            break;
-        case (rightArrow):
-        case (rightKey):
-            wizard.vx = MAX_SPEED;
-            break;
-        }
-    });
-    
-    $(document).keyup(function(event) {
-        switch(event.which) {
-        case (upArrow):
-        case (upKey):
-            wizard.vy = Math.max(wizard.vy, 0);
-            break;
-        case (downArrow):
-        case (downKey):
-            wizard.vy = Math.min(wizard.vy, 0);
-            break;
-        case (leftArrow):
-        case (leftKey):
-            wizard.vx = Math.max(wizard.vx, 0);
-            break;
-        case (rightArrow):
-        case (rightKey):
-            wizard.vx = Math.min(wizard.vx, 0);
-            break;
-        }
-    });
-
-    setInterval(function() {
-        wizard.position.x += wizard.vx / 1000;
-        wizard.position.y += wizard.vy / 1000;
-    }, 20);
-});
-
-    </script>
-
-    </body>
+  </body>
 </html>
 
 <!-- OLD CODE:
