--- a/view/index.html
+++ b/view/index.html
@@ -9,13 +9,27 @@
 
 </head>
   <body>
-    
-    <div id="pingBox">
-        RTT: <span id="pingNum"></span> ms
-    </div>
-
-    <h1>JakeJohnLaneAwesomeGame</h1>
-
+  
+	 <div id="content">
+	    
+	    <div id="pingBox">
+	        RTT: <span id="pingNum"></span> ms
+	    </div>
+	
+	    <h1>JakeJohnLaneAwesomeGame</h1>
+	    
+	    <div id="statBox">
+	        <p><span id="class"></span></p>
+	        <p>HP: <span id="currHP"></span>/<span id="maxHP"></span></p>
+	        <p>Atk: <span id="atkDmg"></span></p>
+	        <p>Ammo: <span id="ammo"></span></p>
+	        
+	    </div>
+	    
+	    <div id="stageBox"></div>
+	
+	    <div id="jumbotron"></div>
+	</div>
   </body>
 </html>
 
