--- a/view/index.html
+++ b/view/index.html
@@ -27,7 +27,15 @@
 	    
 	    <div id="stageBox"></div>
 	
-	    <div id="jumbotron"></div>
+	    <div id="jumbotron">
+	       <table id="rttTable">
+	           <tr>
+	               <th><!-- Color --></th>
+	               <th>Player</th>
+	               <th>RTT</th>
+	           </tr>
+	       </table>
+	    </div>
 	</div>
   </body>
 </html>
