--- a/view/index.html
+++ b/view/index.html
@@ -23,6 +23,7 @@
 	        <p>HP: <span id="currHP"></span>/<span id="maxHP"></span></p>
 	        <p>Atk: <span id="atkDmg"></span></p>
 	        <p>Ammo: <span id="ammo"></span></p>
+	        <p>Hits: <span id="hits"></span></p>
 	    </div>
 	    
 	    <div id="stageBox"></div>
