--- a/view/app.css
+++ b/view/app.css
@@ -24,24 +24,23 @@ h1 {
 	display: inline-block;
 }
 
-#jumbotron, #statBox {
+#leftBox, #rightBox {
 	display: inline-block;
     height: 590px;
     color: #00FF26;
     width: 200px;
     border: 1px solid #00FF26;
     padding: 4px;
+    overflow: hidden;
 }
 
 #statBox {
     text-decoration: bold;
+    height: 40%;
+    border-bottom: 1px solid #00FF26;
 }
 
-#jumbotron {
-
-}
-
-#jumbotron th, #jumbotron td {
+#rttBox th, #rttBox td {
 	padding: 4px;
 	text-align: left;
 }
@@ -52,12 +51,6 @@ h1 {
 	margin: 2px;
 	padding: 0;
 	font-size: 20pt;
-}
-
-#jumbotron p {
-	float: left;
-	clear: both;
-	margin: 2px;
 }
 
 #content {
@@ -86,4 +79,23 @@ h1 {
 
 #charSelector * {
 	opacity: 1;
+}
+
+#rttBox {
+	clear: both;
+}
+
+#jumbotron {
+	height: 100%;
+	font-size: 10pt;
+}
+
+#jumbotron, #rttBox {
+	float: left;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-right: 25px;
 }
