--- a/view/index.html
+++ b/view/index.html
@@ -17,25 +17,32 @@
 	    </div>
 	
 	    <h1>JakeJohnLaneAwesomeGame</h1>
-	    
-	    <div id="statBox">
-	        <p><span id="class"></span></p>
-	        <p>HP: <span id="currHP"></span>/<span id="maxHP"></span></p>
-	        <p>Atk: <span id="atkDmg"></span></p>
-	        <p>Ammo: <span id="ammo"></span></p>
-	        <p>Hits: <span id="hits"></span></p>
-	    </div>
+    
+        <div id="leftBox">
+            <div id="statBox">
+                <p><span id="class"></span></p>
+                <p>HP: <span id="currHP"></span>/<span id="maxHP"></span></p>
+                <p>Atk: <span id="atkDmg"></span></p>
+                <p>Ammo: <span id="ammo"></span></p>
+                <p>Kills: <span id="kills"></span></p>
+            </div>
+            <div id="rttBox">
+               <table id="rttTable">
+                   <tr>
+                       <th><!-- Color --></th>
+                       <th>Player</th>
+                       <th>RTT</th>
+                       <th>Kills</th>
+                   </tr>
+               </table>
+            </div>
+        </div>
 	    
 	    <div id="stageBox"></div>
-	
-	    <div id="jumbotron">
-	       <table id="rttTable">
-	           <tr>
-	               <th><!-- Color --></th>
-	               <th>Player</th>
-	               <th>RTT</th>
-	           </tr>
-	       </table>
+	    
+	    <div id="rightBox">
+            <div id="jumbotron">
+            </div>
 	    </div>
 	</div>
   </body>
